--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rules-service",
+  "name": "project-service",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "ljson": "^2.0.0",
     "mongoose": "^4.5.2",
+    "mongoose-schema-extend": "^0.2.2",
     "morgan": "~1.6.1",
     "node-rules": "^3.0.3",
     "resourcejs": "^1.2.2",
@@ -24,7 +25,17 @@
   },
   "devDependencies": {
     "azure": "^0.10.6",
+    "concurrent-transform": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.2",
+    "gulp-jade": "^1.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-stylus": "^2.5.0",
+    "gulp-tap": "^0.1.3",
     "mocha": "^2.5.3",
-    "shoulda": "0.0.1"
+    "shelljs": "^0.7.0",
+    "shoulda": "0.0.1",
+    "stylus": "^0.42.3",
+    "touch": "^1.0.0"
   }
 }
