--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-stylus": "^2.5.0",
     "gulp-tap": "^0.1.3",
     "mocha": "^2.5.3",
+    "raml2html": "^2.4.0",
     "shelljs": "^0.7.0",
     "shoulda": "0.0.1",
     "stylus": "^0.42.3",
